--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/practicedb?useSSL=false&server
 spring.datasource.username=root
 spring.datasource.password=Doul#2457
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#Search API like This
+#127.0.0.1:8095/api/search (Method post)
